--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="search-wrapper">
-            <input type="text" id="country-inp" placeholder="Enter a country name here..." />
+            <input type="text" id="country-inp" placeholder="Enter a country name" />
             <button id="search-btn">Search</button>
         </div>
         <div id="result"></div>
